CREATE DATABASE SecureStorageDB;
GO

CREATE DATABASE SecureStorageDB2;
GO

CREATE DATABASE SecureStorageDB3;
GO

CREATE DATABASE SecureStorageDB4;
GO

CREATE DATABASE SecureStorageDB5;
GO

USE SecureStorageDB;
GO

CREATE TABLE Users (
    UserID INT IDENTITY(1,1) PRIMARY KEY,
    PasswordHash VARBINARY(64) NOT NULL,
    Email NVARCHAR(255) NOT NULL UNIQUE,
    CreatedAt DATETIME DEFAULT GETDATE(),
	FirstName NVARCHAR(100),	
    LastName NVARCHAR(100)
)
GO
